--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,11 +70,14 @@ dependencies {
     /*material*/
     implementation 'com.google.android.material:material:1.12.0'
 
-    /*firebase*/
-    implementation platform('com.google.firebase:firebase-bom:33.1.1')
-    implementation 'com.google.firebase:firebase-analytics'
+//    /*firebase*/
+//    implementation platform('com.google.firebase:firebase-bom:33.1.1')
+//    implementation 'com.google.firebase:firebase-analytics'
 
     /*Health Connect*/
     implementation "androidx.health.connect:connect-client:1.1.0-alpha02"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+
+    implementation 'com.google.android.material:material:1.6.0'  // TabLayout
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'      // ViewPager2
 }
