--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     /*Health Connect*/
     implementation "androidx.health.connect:connect-client:1.1.0-alpha02"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    /*Google Play Services Location API*/
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     implementation 'com.google.android.material:material:1.6.0'  // TabLayout
     implementation 'androidx.viewpager2:viewpager2:1.0.0'      // ViewPager2
