--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.6.0'  // TabLayout
     implementation 'androidx.viewpager2:viewpager2:1.0.0'      // ViewPager2
+
+    /*Retrofit*/
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
