--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission  android:name="android.permission.INTERNET"/>
+
     <!--Health Connect-->
     <queries>
         <package android:name="com.google.android.apps.healthdata" />
@@ -33,6 +35,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fitness"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <meta-data
@@ -40,6 +43,7 @@
             android:value="AIzaSyCDHisZSnBUQKdL85Ct69-pyZS9u6Q7KKI" />
 
         <activity android:name=".LoginActivity" />
+        <activity android:name=".SignupActivity" />
 
         <activity
             android:name=".MainActivity"
